--- a/main.css
+++ b/main.css
@@ -87,3 +87,10 @@
 #checkbuttons {
 	padding-bottom: 40px;
 }
+
+#footer {
+	padding: 10px;
+	padding-top: 16px;
+	font-size: 18px;
+	font-weight: bold;
+}
