--- a/main.css
+++ b/main.css
@@ -108,7 +108,6 @@ canvas {
 	font-family: 'Shift', sans-serif;
 	font-size: 20px;
 	font-weight: bold;
-
 }
 
 #checkbuttons {
@@ -122,15 +121,36 @@ canvas {
 	font-weight: bold;
 }
 
+#browser{
+	background-color: #404040;
+}
+
 #browser p{
-	padding-top: 18px;
+	position:absolute;
+	bottom: 1%;
+	left:46.25%;
+	color: #000;
 	font-size: 18px;
 	font-weight: bold;
 }
 
-#browser .jumbotron{
-	background-image: url(images/browser_back.png);
-	height: 1080px;
-	background-repeat: no-repeat;
-	background-size: cover;
+#browser a{
+	position: fixed;
+	bottom: 7%;
+	left: 46%;
+	background-color: #8b3adb;
+	font-size: 18px;
+	font-weight: bold;
+}
+
+#owl{
+	position:absolute;
+	top:25%;
+	left: 1%;
+}
+
+#bat {
+	position:absolute;
+	top:24.5%;
+	right: 1%;
 }
