--- a/main.css
+++ b/main.css
@@ -1,13 +1,14 @@
 .nav {
   padding-top: 10px;
+  background-color: #7e27d5;
+  border-bottom: 4px solid #232024;
 }
 
 .nav a {
-  color: #000;
-  font-size: 12px;
+  color: #fff;
+  font-size: 18px;
   font-weight: bold;
   padding: 14px 10px;
-  text-transform: uppercase;
 }
 
 .nav li {
@@ -117,7 +118,7 @@ canvas {
 }
 
 #checkbuttons {
-	padding-top: 0px;
+	padding-top: 10px;
 	padding-bottom: 20px;
 }
 
