--- a/main.css
+++ b/main.css
@@ -138,6 +138,12 @@ canvas {
 	padding-bottom: 20px;
 }
 
+#home-left {
+	position: fixed;
+	right: 10%;
+	top: 50%;
+}
+
 #footer {
 	padding-top: 18px;
 	font-size: 18px;
