Updated button and favicon color

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6331,8 +6331,8 @@ button.close {
 }
 
 .btn-custom {
-  background-color: #8b3adb;
-  border-color: #8b3adb;
+  background-color: #673AB7;
+  border-color: #673AB7;
   color: #fff;
 }
 .btn-custom:hover,
