Added favicon, updated sorting, most thumbnails, slide text

--- a/New Design/Template/brushed/index.html
+++ b/New Design/Template/brushed/index.html
@@ -10,6 +10,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 <title>Hayden Platt - Game Designer</title>   
+<link rel="icon" type="image/vnd.microsoft.icon" href="_include/img/favicon.ico" />
 
 <meta name="description" content="Insert Your Site Description" /> 
 
@@ -96,9 +97,7 @@
     <div class="overlay"></div>
 
     <div class="slider-text">
-    	<div id="slidecaption">
-			<div class="slide-content">Hayden Platt</div>
-		</div>
+    	<div id="slidecaption"></div>
     </div>   
 	
 	<div class="control-nav">
@@ -156,10 +155,11 @@
                     <ul id="filters" class="option-set" data-option-key="filter">
                     	<li class="type-work">Project Role</li>
                         <li><a href="#filter" data-option-value="*" class="selected">All Projects</a></li>
-                        <li><a href="#filter" data-option-value=".design">Level Designer</a></li>
-                        <li><a href="#filter" data-option-value=".photography">Gameplay Designer</a></li>
-                        <li><a href="#filter" data-option-value=".video">Project Lead</a></li>
-						<li><a href="#filter" data-option-value=".other">Gameplay Programmer</a></li>
+                        <li><a href="#filter" data-option-value=".level">Level Designer</a></li>
+                        <li><a href="#filter" data-option-value=".gameplay">Gameplay Designer</a></li>
+                        <li><a href="#filter" data-option-value=".lead">Project Lead</a></li>
+						<li><a href="#filter" data-option-value=".programmer">Gameplay Programmer</a></li>
+						<li><a href="#filter" data-option-value=".other">Other Works</a></li>
                     </ul>
                 </nav>
                 <!-- End Filter -->
@@ -171,7 +171,7 @@
                     	<ul id="thumbs">
                         
 							<!-- Item Project and Filter Name -->
-                        	<li class="item-thumbs span3 design">
+                        	<li class="item-thumbs span3 level lead programmer">
                             	<!-- Fancybox - Gallery Enabled - Title - Full Image -->
                             	<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Project HYPETRAIN" href="_include/img/work/full/image-01-full.jpg">
                                 	<span class="overlay-img"></span>
@@ -183,7 +183,7 @@
                         	<!-- End Item Project -->
                             
 							<!-- Item Project and Filter Name -->
-                        	<li class="item-thumbs span3 design">
+                        	<li class="item-thumbs span3 level gameplay lead">
                             	<!-- Fancybox - Gallery Enabled - Title - Full Image -->
                             	<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="KrabKlashers" href="_include/img/work/full/image-02-full.jpg">
                                 	<span class="overlay-img"></span>
@@ -195,7 +195,7 @@
                         	<!-- End Item Project -->
                             
 							<!-- Item Project and Filter Name -->
-                        	<li class="item-thumbs span3 photography">
+                        	<li class="item-thumbs span3 gameplay">
                             	<!-- Fancybox - Gallery Enabled - Title - Full Image -->
                             	<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="What Do We Do Meow?" href="_include/img/work/full/image-03-full.jpg">
                                 	<span class="overlay-img"></span>
@@ -207,7 +207,7 @@
                         	<!-- End Item Project -->
                             
 							<!-- Item Project and Filter Name -->
-                        	<li class="item-thumbs span3 video">
+                        	<li class="item-thumbs span3 gameplay level">
                             	<!-- Fancybox Media - Gallery Enabled - Title - Link to Video -->
                             	<a class="hover-wrap fancybox-media" data-fancybox-group="video" title="IncognitOwl" href="https://www.youtube.com/watch?v=LPURaqmMQsQ">
                                 	<span class="overlay-img"></span>
@@ -219,7 +219,7 @@
                         	<!-- End Item Project -->
                             
 							<!-- Item Project and Filter Name -->
-                        	<li class="item-thumbs span3 photography">
+                        	<li class="item-thumbs span3 level programmer">
                             	<!-- Fancybox - Gallery Enabled - Title - Full Image -->
                             	<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Dreamlock" href="_include/img/work/full/image-04-full.jpg">
                                 	<span class="overlay-img"></span>
@@ -231,7 +231,7 @@
                         	<!-- End Item Project -->
                             
 							<!-- Item Project and Filter Name -->
-                        	<li class="item-thumbs span3 photography">
+                        	<li class="item-thumbs span3 lead level programmer">
                             	<!-- Fancybox - Gallery Enabled - Title - Full Image -->
                             	<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Shackle" href="_include/img/work/full/image-05-full.jpg">
                                 	<span class="overlay-img"></span>
@@ -243,7 +243,7 @@
                         	<!-- End Item Project -->
                             
 							<!-- Item Project and Filter Name -->
-                        	<li class="item-thumbs span3 video">
+                        	<li class="item-thumbs span3 other">
                             	<!-- Fancybox Media - Gallery Enabled - Title - Link to Video -->
                             	<a class="hover-wrap fancybox-media" data-fancybox-group="video" title="3D Model: Bojack Horseman's House" href="http://vimeo.com/50834315">
                                 	<span class="overlay-img"></span>
@@ -284,10 +284,10 @@
         <!-- Start Profile -->
     	<div class="span4 profile">
         	<div class="image-wrap">
-                <div class="hover-wrap">
+                <!--<div class="hover-wrap">
                     <span class="overlay-img"></span>
                     <span class="overlay-text-thumb">CTO/Founder</span>
-                </div>
+                </div>-->
                 <img src="_include/img/about/me_small.png" alt="John Doe">
             </div>
             <h3 class="profile-name">A Game Designer</h3>
@@ -308,10 +308,10 @@
         <!-- Start Profile -->
     	<div class="span4 profile">
         	<div class="image-wrap">
-                <div class="hover-wrap">
+                <!--<div class="hover-wrap">
                     <span class="overlay-img"></span>
                     <span class="overlay-text-thumb">Creative Director</span>
-                </div>
+                </div>-->
                 <img src="_include/img/about/ursa_logo_trans.png" alt="Jane Helf">
             </div>
             <h3 class="profile-name">A Leader</h3>
@@ -332,10 +332,10 @@
         <!-- Start Profile -->
     	<div class="span4 profile">
         	<div class="image-wrap">
-                <div class="hover-wrap">
+                <!--<div class="hover-wrap">
                     <span class="overlay-img"></span>
                     <span class="overlay-text-thumb">Lead Designer</span>
-                </div>
+                </div>-->
                 <img src="_include/img/about/work_sesh.jpg" alt="Joshua Insanus">
             </div>
             <h3 class="profile-name">A Student</h3>
@@ -404,8 +404,8 @@
                 <ul>
                     <li><a href="mailto:misterplatt17@gmail.com">misterplatt17@gmail.com</a></li>
                     <li>(916) 698-1083</li>
-					<li><a href="https://twitter.com/Bluxart" title="Follow Me on Twitter" target="_blank"><span class="font-icon-social-twitter"></span></a></li>
-                    <li><a href="http://www.linkedin.com/in/alessioatzeni" title="Follow Me on LinkedIn" target="_blank"><span class="font-icon-social-linkedin"></span></a></li>
+					<li><a href="https://twitter.com/hayden_platt" title="Follow Me on Twitter" target="_blank"><span class="font-icon-social-twitter"></span></a></li>
+                    <li><a href="http://www.linkedin.com/in/haydenplatt" title="Follow Me on LinkedIn" target="_blank"><span class="font-icon-social-linkedin"></span></a></li>
 				    <li><a href="http://github.com/misterplatt" title="Follow Me on Github" target="_blank"><span class="font-icon-social-linkedin"></span></a></li>
                 </ul>
             </div>
