--- a/New Design/Template/brushed/index.html
+++ b/New Design/Template/brushed/index.html
@@ -190,7 +190,7 @@
                                     <span class="overlay-img-thumb font-icon-plus"></span>
                                 </a>
                                 <!-- Thumb Image and Description -->
-                                <img src="_include/img/work/thumbs/image02.png" dlink="_include/downloads/KrabKlashers.zip" alt="Players play as robotic crustaceans equipped with rocket thrusters in this 3D Online Multiplayer Battle Arena, competing for the title of Top Krab! ">
+                                <img src="_include/img/work/thumbs/image02.png" dlink="_include/downloads/KrabKlashers.rar" alt="Players play as robotic crustaceans equipped with rocket thrusters in this 3D Online Multiplayer Battle Arena, competing for the title of Top Krab! ">
                             </li>
                         	<!-- End Item Project -->
                             
