--- a/include/css/main.css
+++ b/include/css/main.css
@@ -7,6 +7,13 @@ Description: Personal Website and Portfolio of Alessio Atzeni
 Version: 1.0
 */
 
+/* ==================================================
+   Font Imports
+================================================== */
+
+@font-face{
+	font-family: Righteous; src: url('fonts/Righteous-Regular.ttf')
+}
 
 /* ==================================================
    Basic Styles #673AB7
@@ -28,7 +35,7 @@ body{
 	color:#7F8289;
 	font-weight:300;
 	font-size:16px;
-	font-family: 'Titillium Web', sans-serif;
+	font-family: Righteous, sans-serif;
 	line-height:28px;
 }
 
@@ -113,7 +120,7 @@ hr {
 
 input, button, select, textarea {
 	font-weight: 300;
-	font-family: 'Titillium Web', sans-serif;
+	font-family: Righteous, sans-serif;
 	outline: 0;
 }
 
@@ -205,7 +212,7 @@ h6{
 	margin:0 0 20px 0;
 	color:#FFFFFF;
 	font-weight:300;
-	font-family: 'Titillium Web', sans-serif;
+	font-family: Righteous, sans-serif;
 	line-height:1.5em;
 }
 
@@ -327,10 +334,18 @@ h3.spec {
 }
 
 #home-slider .slide-content {
-	font-size: 60px;
+	font-size: 80px;
+    font-family: Righteous;
 	color: #FFFFFF;
 	letter-spacing: -3px;
 	text-transform: uppercase;	
+}
+
+@media (max-width: 500px) {
+    body {}
+    #home-slider .slide-content {
+        font-size: 57px;
+    }
 }
 
 #home-slider .control-nav {
