--- a/include/css/main.css
+++ b/include/css/main.css
@@ -301,7 +301,7 @@ h3.spec {
 #home-slider {
 	position: relative;
 	overflow: hidden;
-	height: 100%;
+	height: 94%;
 }
 
 #home-slider .overlay { 
@@ -312,6 +312,12 @@ h3.spec {
 	opacity: 0.7;
 	filter: alpha(opacity=70);
 	z-index: 0;
+}
+
+#home-slider .overlay-button { 
+	position: absolute;
+    bottom: 15%;
+	width: 100%;
 }
 
 #home-slider .slider-text {
@@ -692,14 +698,14 @@ nav#menu #menu-nav li a:hover {
 
 .page {
 	background: #2F3238;
-	padding: 100px 0;
+	padding: 50px 0;
 	position: relative;
 	z-index: 99;
 }
 
 .page-alternate {
 	background: #26292E;
-	padding: 100px 0;
+	padding: 50px 0;
 	position: relative;
 	z-index: 99;
 }
@@ -1443,4 +1449,23 @@ footer .credits {
       -ms-transition: none;
        -o-transition: none;
           transition: none;
+}
+
+.img-slider-profile {
+    max-width: 100%;
+    height: auto;
+}
+
+@media (max-width: 767px) {
+    .img-slider-profile {
+        max-width: 30%;
+        height: auto;
+    }
+}
+
+@media (max-width: 330px) {
+    .img-slider-profile {
+        max-width: 25%;
+        height: auto;
+    }
 }
